--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,42 +1,124 @@
 <!-- - Carousel of Random Trips - -->
 
-<section aria-label='Newest photos'>
-  <div class='carousel' data-carousel>
-    <button
-      class='carousel-button prev'
-      data-carousel-button='prev'
-    >&#8592;</button>
-    <button
-      class='carousel-button next'
-      data-carousel-button='next'
-    >&#8594;</button>
-    <ul data-slides>
-      <li class='slide' data-active>
-        <img
-          src='Images/yana-marudova-I9irKyriQAc-unsplash.jpg'
-          alt='Travel IMG#1'
-        />
-      </li>
-      <li class='slide'>
-        <img
-          src='Images/tom-podmore-KS1BOYSzjh0-unsplash.jpg'
-          alt='Travel IMG#2'
-        />
-      </li>
-      <li class='slide'>
-        <img
-          src='Images/tom-podmore-t_TvL0ZLVyo-unsplash.jpg'
-          alt='Travel IMG#3'
-        />
-      </li>
-    </ul>
+<div
+  id='default-carousel'
+  class='relative w-full my-10 z-0'
+  data-carousel='slide'
+>
+  <!-- Carousel wrapper -->
+  <div class='relative h-64 overflow-hidden rounded-lg md:h-[70%]'>
+    <!-- Item 1 -->
+    <div class='hidden duration-700 ease-in-out' data-carousel-item>
+      <img
+        src='Images/yana-marudova-I9irKyriQAc-unsplash.jpg'
+        alt='Travel IMG#1'
+        class='absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2'
+      />
+    </div>
+    <!-- Item 2 -->
+    <div class='hidden duration-700 ease-in-out' data-carousel-item>
+      <img
+        src='Images/tom-podmore-KS1BOYSzjh0-unsplash.jpg'
+        alt='Travel IMG#2'
+        class='absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2'
+      />
+    </div>
+    <!-- Item 3 -->
+    <div class='hidden duration-700 ease-in-out' data-carousel-item>
+      <img
+        src='Images/tom-podmore-t_TvL0ZLVyo-unsplash.jpg'
+        alt='Travel IMG#3'
+        class='absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2'
+      />
+    </div>
+
   </div>
-</section>
+  <!-- Slider indicators -->
+  <div
+    class='absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse'
+  >
+    <button
+      type='button'
+      class='w-3 h-3 rounded-full'
+      aria-current='true'
+      aria-label='Slide 1'
+      data-carousel-slide-to='0'
+    ></button>
+    <button
+      type='button'
+      class='w-3 h-3 rounded-full'
+      aria-current='false'
+      aria-label='Slide 2'
+      data-carousel-slide-to='1'
+    ></button>
+    <button
+      type='button'
+      class='w-3 h-3 rounded-full'
+      aria-current='false'
+      aria-label='Slide 3'
+      data-carousel-slide-to='2'
+    ></button>
+  </div>
+  <!-- Slider controls -->
+  <button
+    type='button'
+    class='absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none'
+    data-carousel-prev
+  >
+    <span
+      class='inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none'
+    >
+      <svg
+        class='w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180'
+        aria-hidden='true'
+        xmlns='http://www.w3.org/2000/svg'
+        fill='none'
+        viewBox='0 0 6 10'
+      >
+        <path
+          stroke='currentColor'
+          stroke-linecap='round'
+          stroke-linejoin='round'
+          stroke-width='2'
+          d='M5 1 1 5l4 4'
+        />
+      </svg>
+      <span class='sr-only'>Previous</span>
+    </span>
+  </button>
+  <button
+    type='button'
+    class='absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none'
+    data-carousel-next
+  >
+    <span
+      class='inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none'
+    >
+      <svg
+        class='w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180'
+        aria-hidden='true'
+        xmlns='http://www.w3.org/2000/svg'
+        fill='none'
+        viewBox='0 0 6 10'
+      >
+        <path
+          stroke='currentColor'
+          stroke-linecap='round'
+          stroke-linejoin='round'
+          stroke-width='2'
+          d='m1 9 4-4-4-4'
+        />
+      </svg>
+      <span class='sr-only'>Next</span>
+    </span>
+  </button>
+</div>
+
 <!-- - login Button - -->
 
-<div>
+<div class='flex w-full place-content-center mb-12 md:mb-10'>
   <button
-    class='login-btn transition ease-in-out delay-150 bg-gradient-to-r from-green-800 via-green-600 to-lime-600 ... hover:-translate-y-1 hover:scale-110 hover:bg-yellow-500 duration-300 ...'
+    class='transition ease-in-out delay-150 bg-gradient-to-r from-green-800 via-green-600 to-lime-600 hover:-translate-y-1 hover:scale-110 hover:bg-yellow-500 duration-300 p-10 md:p-8 rounded-lg shadow-lg'
   >
     {{#if logged_in}}
       <a href='/profile'>Adventure Awaits!</a>
