modified the homepage

--- a/views/Trip.handlebars
+++ b/views/Trip.handlebars
@@ -149,7 +149,7 @@
             >
               <img
                 src='{{user.profile_image}}'
-                class='rounded-full shadow-lg sm:w-20 md:w-40 lg:w-40 bg-white'
+                class='rounded-full shadow-lg w-14 h-14 md:w-24 md:h-24 bg-white'
                 alt='{{user.image_name}}'
               />
             </div>
@@ -165,7 +165,7 @@
               >
                 <img
                   src='{{user.profile_image}}'
-                  class='rounded-full shadow-lg sm:w-20 md:w-40 lg:w-40 bg-white'
+                  class='rounded-full shadow-lg w-14 h-14 md:w-24 md:h-24 bg-white'
                   alt='{{user.image_name}}'
                 />
               </div>
