--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,7 +10,7 @@
     >
       <img
         src='{{profile_image}}'
-        class='rounded-full shadow-lg sm:w-20 md:w-40 lg:w-40 border-4 border-green-900'
+        class='rounded-full shadow-lg w-10 h-10 md:w-20 md:h-20 border-4 border-green-900'
         alt='{{image_name}}'
       />
       <h2 class='text-lime-700 text-font-bold'>{{name}}</h2>
@@ -62,7 +62,7 @@
                           >
                             <img
                               src='{{friend.user.profile_image}}'
-                              class='flex flex-none w-24 h-24 lg:w-30 lg:h-30 self-center rounded-full shadow-lg border-2 border-green-900 mt-2'
+                              class='flex flex-none w-10 h-10 md:w-20 md:h-20 self-center rounded-full shadow-lg border-2 border-green-900 mt-2'
                               alt='{{friend.user.image_name}}'
                             />
                             <h2
