--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1147,6 +1147,14 @@ input[type="range"]::-ms-fill-lower {
   height: 83.333333%;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
 .min-h-\[50\%\] {
   min-height: 50%;
 }
@@ -1201,6 +1209,10 @@ input[type="range"]::-ms-fill-lower {
 
 .w-5\/6 {
   width: 83.333333%;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .flex-1 {
@@ -2127,8 +2139,28 @@ input[type="range"]::-ms-fill-lower {
     height: 70%;
   }
 
+  .md\:h-40 {
+    height: 10rem;
+  }
+
+  .md\:h-20 {
+    height: 5rem;
+  }
+
+  .md\:h-24 {
+    height: 6rem;
+  }
+
   .md\:w-40 {
     width: 10rem;
+  }
+
+  .md\:w-20 {
+    width: 5rem;
+  }
+
+  .md\:w-24 {
+    width: 6rem;
   }
 
   .md\:self-auto {
@@ -2141,6 +2173,16 @@ input[type="range"]::-ms-fill-lower {
 
   .md\:p-8 {
     padding: 2rem;
+  }
+
+  .md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .md\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 }
 
