--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -118,7 +118,7 @@
 
 <div class='flex w-full place-content-center mb-12 md:mb-10'>
   <button
-    class='transition ease-in-out delay-150 bg-gradient-to-r from-green-800 via-green-600 to-lime-600 hover:-translate-y-1 hover:scale-110 hover:bg-yellow-500 duration-300 p-10 md:p-8 rounded-lg shadow-lg'
+    class='transition ease-in-out delay-150 bg-gradient-to-r from-green-800 via-green-600 to-lime-600 hover:-translate-y-1 hover:scale-110 hover:bg-yellow-500 duration-300 p-10 md:px-8 md:py-4 rounded-lg shadow-lg'
   >
     {{#if logged_in}}
       <a href='/profile'>Adventure Awaits!</a>
