--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,7 +46,7 @@
           >
             <div class='text-md sm:text-4xl cursor-pointer'><a href='/'><i
                   class='fa-sharp fa-solid fa-plane mr-1'
-                ></i>Jet Set Vacations</a>
+                ></i>Travel Social Vacations</a>
             </div>
             <!-- Search Bar -->
             <div class='flex flex-col items-center md:self-auto'>
@@ -65,7 +65,7 @@
                 <a href='/profile'>
                   <img
                     src='{{profile_url}}'
-                    class='rounded-full shadow-lg sm:w-20 md:w-40 lg:w-40 border-4 border-green-900'
+                    class='rounded-full shadow-lg w-10 h-10 md:w-20 md:h-20 border-4 border-green-900'
                     alt='{{profile_alt}}'
                   />
                   <h2 class='text-white text-font-bold'>{{full_name}}</h2>
